--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ export class UserSummary extends LitElement {
                 
                 return html`
                 <li class="list-group-item" style="display:flex;align-items:center;">
-                  <a style="all:unset;cursor: pointer;" href="https://twitter.com/${item.twitterDisplayName}" target="_blank" title="Open on Twitter">
+                  <a style="all:unset;cursor: pointer;" href="https://twitter.com/${item.twitterDisplayName}" target="_blank" title="Open @${item.twitterDisplayName} on Twitter">
                     <div style="display:flex">
                         <img src="${profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/>
                         <div style="text-align:left;padding-left:12px;margin-top:auto;margin-bottom:auto;">
