--- a/index.html
+++ b/index.html
@@ -267,4 +267,12 @@ customElements.define('stock-toolbar', StockToolbar);
 </script>
 
 <stock-toolbar></stock-toolbar>
-  
+
+<span class="lead mb-4" style="text-align: justify;text-justify: inter-word;">
+  <p>
+    Browse all Twitter users in the TradeAudit mobile app for iOS and Android and see how your favourite follows stack up on real world performance.
+  </p>
+  <div class="text-center">
+    <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
+  </div>
+</span>
