--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@ customElements.define('stock-toolbar', StockToolbar);
 
 <span class="lead" style="text-align:center;text-justify: inter-word;">
   <p class="mt-5 fw-bold">
-    Browse all Twitter users in the TradeAudit mobile app for iOS and Android
+    Browse your Twitter follows in the TradeAudit mobile app
   </p>
   <p>
-    See how your favourite follows stack up on real world performance.
+    See how your favourites stack up on real world performance.
   </p>
   <div class="text-center">
     <img alt="Get it on Google Play" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" height="60px">
