--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ customElements.define('stock-toolbar', StockToolbar);
 
 <span class="lead" style="text-align:center;text-justify: inter-word;">
   <p class="mt-5 fw-bold">
-    Browse your Twitter follows in the TradeAudit mobile app
+    Browse all of your Twitter follows in the TradeAudit mobile app
   </p>
   <p>
     See how your favourites stack up on real world performance.
