--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ export class PieChart extends LitElement {
 
     const total = this.positive + this.negative;
     const percent = total == 0 ? 0 : (this.positive / total);
-    const text = Math.round(percent) + '%';
+    const text = Math.round(percent * 100) + '%';
     this.title = text + ' Positive Trades';
     const textX = text.length == 4 ? -16.5 : (text.length == 3 ? -12 : -7);
     const size = this.size ?? 64;
