--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ export class UserSummary extends LitElement {
                         <div style="text-align:left;padding-left:12px;margin-top:auto;margin-bottom:auto;">
                             <h5 class="card-title">${item.twitterUserName}${item.isProtected ? UserSummary.isProtected : null}${item.isVerified ? UserSummary.isVerified : null}</h5>
                             <h6 class="card-subtitle text-muted">@${item.twitterDisplayName}</h6>
-                            <span>${UserSummary.humanNumber(item.followerCount)} Followers</span>
+                            <span>${humanNumber(item.followerCount)} Followers</span>
                         </div>
                     </div>
                   </a>
