--- a/rankings.html
+++ b/rankings.html
@@ -8,6 +8,10 @@ author_profile: false
 
 <h1 class="display-6 fw-bold text-center">Fintwit User Rankings</h1>
 
+<span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
+  Add trade ideas for Fintwit users you follow, and see how others have ranked these trades in realtime using the App.
+</span>
+
 <script type="module">
 import {LitElement, html, svg, css} from 'https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js';
 
