--- a/rankings.html
+++ b/rankings.html
@@ -9,7 +9,7 @@ author_profile: false
 <h1 class="display-6 fw-bold text-center">Fintwit User Rankings</h1>
 
 <span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
-  Add trade ideas for Fintwit users you follow, and see how others have ranked these trades in realtime using the App.
+  Add new Fintwit trade ideas with realtime performance metrics in the App.
 </span>
 
 <script type="module">
