--- a/rankings.html
+++ b/rankings.html
@@ -8,7 +8,7 @@ author_profile: false
 
 <h1 class="display-6 fw-bold text-center">Fintwit User Rankings</h1>
 
-<span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
+<span class="lead mb-4" style="text-align:center;">
   Add new Fintwit trade ideas with realtime performance metrics in the App.
 </span>
 
