--- a/rankings.html
+++ b/rankings.html
@@ -8,7 +8,7 @@ author_profile: false
 
 <h1 class="display-6 fw-bold text-center">Fintwit User Rankings</h1>
 
-<span class="lead mb-4" style="text-align:center;">
+<span class="lead mb-4 text-center" style="text-align:center;">
   Add new Fintwit trade ideas with realtime performance metrics in the App.
 </span>
 
@@ -200,7 +200,7 @@ export class StockToolbar extends LitElement {
     return html`
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <div class="input-group mt-5 mb-2" role="group" aria-label="User Sorting" style="margin:auto;justify-content:center;">
+        <div class="input-group mb-2" role="group" aria-label="User Sorting" style="margin:auto;justify-content:center;">
             <button
                 @click=${() => this.toggleSort(true)}
                 class="btn btn-outline-secondary ${this.isTop ? 'active' : ''}" type="button"
