--- a/rankings.html
+++ b/rankings.html
@@ -168,15 +168,38 @@ export class UserSummary extends LitElement {
 }
 customElements.define('user-summary', UserSummary);
 
-export class StockDropdown extends LitElement {
+export class StockToolbar extends LitElement {
   static properties = {
-    show: { type: Boolean, default: false, attribute: true, reflect: true },
     stocks: { type: Array, state: true },
+    selectedStockSymbol: { type: String, state: true },
+    isTop: { type: Boolean, state: true },
+    usersummaries: { type: Array, state: true, attribute: false },
+    show: { type: Boolean, default: false, attribute: true, reflect: true },
     items: { type: Array, state: true },
-    selected: { type: Object, state: true },
-    max: { type: Number },
   };
 
+  static const maxDropDownItems = 8;
+  
+  constructor() {
+    super();
+    this.stocks = [];
+    this.isTop = true;
+
+    var url = 'https://cf.tradeaudit.app/stocks/top';
+
+    // Making our request
+    fetch(url, { method: 'GET' })
+        .then(Result => Result.json())
+        .then(string => {
+            console.log(string);
+            this.stocks = string.stocks;
+            this.requestUpdate();
+        })
+    .catch(errorMsg => { console.log(errorMsg); });
+
+    this.toggleSelected(null);
+  }
+  
   static styles = css`
     #myInput {
         box-sizing: border-box;
@@ -211,19 +234,12 @@ export class StockDropdown extends LitElement {
 
     .dropdown a:hover {background-color: #ddd}
   `;
-
-  constructor() {
-    super();
-    this.max = 8;
-    this.stocks = [];
-    this.items = [];
-  }
-
+  
   filterFunction(e) {
     console.log(e.target.value);
     const filter = e.target.value.toUpperCase().trim();
     if(filter == ''){
-      this.items = this.stocks.slice(0, this.max);
+      this.items = this.stocks.slice(0, StockToolbar.maxDropDownItems);
     } else {
       this.items = [];
       this.stocks.every(item => {
@@ -241,60 +257,6 @@ export class StockDropdown extends LitElement {
     this.show = !this.show;
     this.selected = item;
     this.requestUpdate();
-  }
-
-  render() {
-
-    return html`
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-      <div class="dropdown">
-      <button
-        @click=${() => this.show = !this.show} class="btn btn-outline-secondary" id="testbtn" style="width:50pt;"
-      >
-        ${this.selected == null ? "?" : this.selected.symbol}
-      </button>
-        <div id="myDropdown" class="dropdown-content" style="z-index:1;display:${this.show ? "block" : "none"};">
-          <input type="text" placeholder="Search.." @input="${this.filterFunction}">
-          <ul style="padding-left:0">
-            ${this.items.map(
-              (item) => html`<li class="dropdown-item" style="cursor:pointer;"><a @click=${() => this.selectFunction(item)}>
-                <div style="width:50pt;font-weight:bold;display:inline-block;">${item.symbol}</div> ${item.name}</a></li>`
-            )}
-          </ul>
-        </div>
-      </div>
-    `;
-  }
-}
-customElements.define('stock-dropdown', StockDropdown);
-
-export class StockToolbar extends LitElement {
-  static properties = {
-      stocks: { type: Array, state: true },
-      selectedStockSymbol: { type: String, state: true },
-      isTop: { type: Boolean, state: true },
-      usersummaries: { type: Array, state: true, attribute: false },    
-  };
-
-  constructor() {
-    super();
-    this.stocks = [];
-    this.isTop = true;
-
-    var url = 'https://cf.tradeaudit.app/stocks/top';
-
-    // Making our request
-    fetch(url, { method: 'GET' })
-        .then(Result => Result.json())
-        .then(string => {
-            console.log(string);
-            this.stocks = string.stocks;
-            this.requestUpdate();
-        })
-    .catch(errorMsg => { console.log(errorMsg); });
-
-    this.toggleSelected(null);
   }
 
   render() {
@@ -327,7 +289,24 @@ export class StockToolbar extends LitElement {
                     ${item.symbol}
                 </button>`
             )}
-        </div><stock-dropdown .stocks=${this.stocks}></stock-dropdown>
+            <stock-dropdown .stocks=${this.stocks}></stock-dropdown>
+            
+            <button
+              @click=${() => this.show = !this.show} class="btn btn-outline-secondary" id="testbtn" style="width:65pt;"
+            >
+              ${this.selected == null ? "?" : this.selected.symbol}
+            </button>
+            <div id="myDropdown" class="dropdown-content" style="z-index:1;display:${this.show ? "block" : "none"};">
+              <input type="text" placeholder="Search.." @input="${this.filterFunction}">
+              <ul style="padding-left:0">
+                ${this.items.map(
+                  (item) => html`<li class="dropdown-item" style="cursor:pointer;"><a @click=${() => this.selectFunction(item)}>
+                    <div style="width:50pt;font-weight:bold;display:inline-block;">${item.symbol}</div> ${item.name}</a></li>`
+                )}
+              </ul>
+            </div>
+            
+        </div>
         <user-summary height="80" .selectedStockSymbol=${this.selectedStockSymbol} .usersummaries=${this.usersummaries}></user-summary>
     `;
   }
