--- a/rankings.html
+++ b/rankings.html
@@ -178,7 +178,7 @@ export class StockToolbar extends LitElement {
     items: { type: Array, state: true },
   };
 
-  static const maxDropDownItems = 8;
+  static maxDropDownItems = 8;
   
   constructor() {
     super();
