--- a/rankings.html
+++ b/rankings.html
@@ -299,9 +299,14 @@ export class StockToolbar extends LitElement {
             <div id="myDropdown" class="dropdown-content" style="z-index:1;display:${this.show ? "block" : "none"};">
               <input type="text" placeholder="Search.." @input="${this.filterFunction}">
               <ul style="padding-left:0">
-                ${this.items.map(
-                  (item) => html`<li class="dropdown-item" style="cursor:pointer;"><a @click=${() => this.selectFunction(item)}>
-                    <div style="width:50pt;font-weight:bold;display:inline-block;">${item.symbol}</div> ${item.name}</a></li>`
+                ${items.map(
+                  (item) => 
+                    html`
+                      <li class="dropdown-item" style="cursor:pointer;">
+                        <a @click=${() => this.selectFunction(item)}>
+                          <div style="width:50pt;font-weight:bold;display:inline-block;">${item.symbol}</div> ${item.name}
+                        </a>
+                      </li>`
                 )}
               </ul>
             </div>
